--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-select-async-paginate": "^0.7.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.81.0"
   }
 }
